# agent-second-brain

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  card-spec.md  hooks-setup.md  retrieval-protocol.md
docs/en/: architecture.md  card-spec.md  hooks-setup.md  retrieval-protocol.md
docs/zh/: architecture.md  card-spec.md  hooks-setup.md  retrieval-protocol.md
engine/: __init__.py  brain_audit.py  brain_inject.py  brain_intake.py  cli.py  config.py  session_chunker.py  transcript_harvest.py  vault_catalog.py  vault_embed.py  vault_lint.py  vault_patrol.py  vault_rings.py  vault_routemap.py  vault_semantic_search.py  vault_touch.py
engine/_scaffold/vault/: _热核.md
engine/_scaffold/vault/MOC/: 枢纽-00-agent-second-brain.md
engine/_scaffold/vault/_模板/: 模板_事例.md  模板_对话.md  模板_文献.md  模板_方法.md  模板_概念.md  模板_知识点.md  模板_符号.md  模板_编年.md  模板_问题.md
engine/_scaffold/vault/卡片/: 方法-维护三连.md
hooks/: settings.example.json
vault/: HOME.md  _待办.md  _检索失败日志.md
vault/_模板/: 模板_关联.md  模板_枢纽.md
vault/卡片/: 概念-判断层持久化.md  问题-00-第一批卡从哪来.md
